<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_guide_template"
    android:background="#EAF1EA"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GuideMainPageActivity">

    <!-- Top bar -->
    <include
        android:id="@+id/topToolbar"
        layout="@layout/layout_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <include
        android:id="@+id/includedNav"
        layout="@layout/layout_navbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/topToolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!--Body-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/footerLayout"
        app:layout_constraintTop_toBottomOf="@id/includedNav">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Category Header -->
            <TextView
                android:id="@+id/tvCampusHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#9BB194"
                android:padding="8dp"
                android:layout_marginTop="20dp"
                android:text="@string/campus_services"
                android:textColor="#000000"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvCampusServices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:nestedScrollingEnabled="false"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="2"
                tools:listitem="@layout/guide_card"
                tools:itemCount="4" />

            <TextView
                android:id="@+id/tvAcademicHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#9BB194"
                android:padding="8dp"
                android:layout_marginTop="20dp"
                android:text="@string/academic_services"
                android:textColor="#000000"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvAcademicServices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:nestedScrollingEnabled="false"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="2"
                tools:listitem="@layout/guide_card"
                tools:itemCount="4" />

            <TextView
                android:id="@+id/tvStudentLifeHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#9BB194"
                android:padding="8dp"
                android:layout_marginTop="20dp"
                android:text="@string/student_life"
                android:textColor="#000000"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvStudentLife"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:nestedScrollingEnabled="false"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="2"
                tools:listitem="@layout/guide_card"
                tools:itemCount="4" />

            <TextView
                android:id="@+id/tvOtherHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#9BB194"
                android:padding="8dp"
                android:layout_marginTop="20dp"
                android:text="@string/other"
                android:textColor="#000000"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvOther"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:nestedScrollingEnabled="false"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="2"
                tools:listitem="@layout/guide_card"
                tools:itemCount="4" />

        </LinearLayout>
    </ScrollView>

    <!--footer-->

    <LinearLayout
        android:id="@+id/footerLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#2F442F"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/footerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/footer_text"
            android:textColor="#FCF5FD"
            android:textSize="12sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
